tests/fixtures/valid_programs/loops.cryo
namespace Main;

import IO from <io/stdio>;

function main() -> int {
    // While loop
    mut i: int = 0;
    while (i < 5) {
        IO::print_int(i);
        i = i + 1;
    }
    
    // For loop with initialization, condition, and increment
    for (mut j: int = 0; j < 3; j++) {
        IO::print_int(j);
    }
    
    // For loop with break and continue
    for (mut k: int = 0; k < 10; k++) {
        if (k == 3) {
            continue;  // Skip 3
        }
        if (k == 7) {
            break;     // Stop at 7
        }
        IO::print_int(k);
    }
    
    // Nested loops
    for (mut outer: int = 0; outer < 2; outer++) {
        for (mut inner: int = 0; inner < 2; inner++) {
            const product: int = outer * inner;
            IO::print_int(product);
        }
    }
    
    return 0;
}