tests/fixtures/invalid_programs/undefined_var.cryo
namespace Main;

import IO from <io/stdio>;

function main() -> int {
    // Undefined variable error
    const x: int = undefined_variable;  // Should cause error
    
    return 0;
}